Réorganisation des fichiers

--- a/competences/index.html
+++ b/competences/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE HTML>
 <html lang="fr">
 
 <head>
@@ -10,31 +11,31 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js" integrity="sha384-6khuMg9gaYr5AxOqhkVIODVIvm9ynTT5J4V1cfthmT+emCG6yVmEZsRHdxlotUnm" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="styleCSS/style.css" />
-    <link rel="stylesheet" type="text/css" href="styleCSS/stylepages.css" />
-    <link rel="stylesheet" media="screen and (max-width: 992px)" href="styleCSS/styleMobile.css" />
+    <link rel="stylesheet" type="text/css" href="../styleCSS/style.css" />
+    <link rel="stylesheet" type="text/css" href="../styleCSS/stylepages.css" />
+    <link rel="stylesheet" media="screen and (max-width: 992px)" href="../styleCSS/styleMobile.css" />
 </head>
 
 <body ontouchstart="">
 
     <div id="globale">
         <header>
-            <h1><a href="index.html">Antoine Després</a></h1>
+            <h1><a href="../">Antoine Després</a></h1>
             <h2>Étudiant à l'IUT de Paris</h2>
             <hr />
 
             <nav>
                 <ul>
-                    <li><a href="experiences.html">Expériences</a></li>
+                    <li><a href="../experiences/">Expériences</a></li>
                     <li><a href="#">Compétences</a>
                         <ul>
-                            <li><a href="competences.html#programmation">Programmation</a></li>
-                            <li><a href="competences.html#mathematiques">Mathématiques</a></li>
-                            <li><a href="competences.html#bureautique">Bureautique</a></li>
-                            <li><a href="competences.html#langues">Langues</a></li>
+                            <li><a href="../competences/#programmation">Programmation</a></li>
+                            <li><a href="../competences/#mathematiques">Mathématiques</a></li>
+                            <li><a href="../competences/#bureautique">Bureautique</a></li>
+                            <li><a href="../competences/#langues">Langues</a></li>
                         </ul>
                     </li>
-                    <li><a href="loisirs.html">Loisirs</a></li>
+                    <li><a href="../loisirs/">Loisirs</a></li>
                 </ul>
             </nav>
 
@@ -47,25 +48,25 @@
 
                 <article>
                     <h1 id="programmation">Programmation</h1><br />
-                    <p><a href="https://arduino.cc"><img class="imageflottante" src="images/Logo-Arduino.png" alt="Le logo Arduino." /></a>J'ai commencé la programmation dès le lycée avec les cours de sciences de l'ingénieur. Nous utilisions des cartes programmables de type Arduino Uno qui nous permettaient de concevoir de petits circuits électroniques (chenillard LED, servomoteurs, capteurs de distance). L'un de nos projets consistait en la reproduction du système d'information voyageur des rames de métro parisien : nous avons associé des mesures de distances recueillies par un capteur à une position d'une rame sur la ligne. Ainsi, il nous était possible de programmer l'allumage, l'extinction ou encore le clignotement de chaque diode en fonction de la position de la rame.</p>
+                    <p><a href="https://arduino.cc"><img class="imageflottante" src="../images/Logo-Arduino.png" alt="Le logo Arduino." /></a>J'ai commencé la programmation dès le lycée avec les cours de sciences de l'ingénieur. Nous utilisions des cartes programmables de type Arduino Uno qui nous permettaient de concevoir de petits circuits électroniques (chenillard LED, servomoteurs, capteurs de distance). L'un de nos projets consistait en la reproduction du système d'information voyageur des rames de métro parisien : nous avons associé des mesures de distances recueillies par un capteur à une position d'une rame sur la ligne. Ainsi, il nous était possible de programmer l'allumage, l'extinction ou encore le clignotement de chaque diode en fonction de la position de la rame.</p>
                     <p>Le langage Arduino est une version dérivée du langage C, que j'ai retrouvé en première année de DUT Informatique accompagné de son évolution C++, ce qui m'a donné une certaine avance dans la compréhension des fondamentaux du code. J'apprends actuellement la programmation orientée objet en Java, et cela me plait beaucoup.</p>
                     <p>J'ai également des bases en langage HTML et CSS, ce qui m'a permis de concevoir le site sur lequel vous naviguez actuellement.</p>
                 </article>
 
                 <article>
                     <h1 id="mathematiques">Mathématiques</h1><br />
-                    <p><img class="imageflottante" src="images/pi.png" F alt="Le nombre Pi, fascinant !" />Mon cursus scolaire m'a transmis de nombreuses connaissances en mathématiques et en logique. Je maîtrise de nombreux outils mathématiques tels que la trigonométrie, les nombres complexes, le calcul matriciel, différentiel ou encore intégral.</p>
+                    <p><img class="imageflottante" src="../images/pi.png" F alt="Le nombre Pi, fascinant !" />Mon cursus scolaire m'a transmis de nombreuses connaissances en mathématiques et en logique. Je maîtrise de nombreux outils mathématiques tels que la trigonométrie, les nombres complexes, le calcul matriciel, différentiel ou encore intégral.</p>
                     <p>J'étudie la logique depuis 2017, ce qui me donne une certaine aisance en matière de raisonnement. J'ai également des notions en théorie des graphes.</p>
 
                 </article>
                 <article>
                     <h1 id="bureautique">Bureautique</h1><br />
-                    <p><a href="https://office.com"><img class="imageflottante" src="images/logo_office.png" alt="Le logo de Microsoft Office." /></a>La réalisation de nombreux projets et travaux de groupe depuis le lycée m'ont permis de maîtriser la suite logicielle Microsoft Office. Je suis apte à rédiger des rapports de qualité traitant de domaines variés et de concevoir une présentation PowerPoint associée qui saura sortir du lot et marquer les esprits.</p>
+                    <p><a href="https://office.com"><img class="imageflottante" src="../images/logo_office.png" alt="Le logo de Microsoft Office." /></a>La réalisation de nombreux projets et travaux de groupe depuis le lycée m'ont permis de maîtriser la suite logicielle Microsoft Office. Je suis apte à rédiger des rapports de qualité traitant de domaines variés et de concevoir une présentation PowerPoint associée qui saura sortir du lot et marquer les esprits.</p>
                     <p>Je maîtrise également Excel, qui me permet d'appuyer mes présentations avec des statistiques pertinentes, ainsi que d'autres logiciels plus spécialisés tels que Publisher pour la conception d'affiches et de cartes en tout genre et Visio pour la réalisation d'organigrammes et de plans d'architecture en 2 dimensions.</p>
                 </article>
                 <article>
                     <h1 id="langues">Langues</h1><br />
-                    <p><img class="imageflottante" src="images/planet.png" alt="Notre chère planète !" />Au cours de ma vie, j'ai eu l'occasion d'apprendre plusieurs langues, que ce soit à l'école ou en dehors par envie personnelle. Voici un tableau dans lequel figure mon niveau de maîtrise de chacune d'entre elles ainsi que d'autres informations telles que la durée d'apprentissage.</p><br />
+                    <p><img class="imageflottante" src="../images/planet.png" alt="Notre chère planète !" />Au cours de ma vie, j'ai eu l'occasion d'apprendre plusieurs langues, que ce soit à l'école ou en dehors par envie personnelle. Voici un tableau dans lequel figure mon niveau de maîtrise de chacune d'entre elles ainsi que d'autres informations telles que la durée d'apprentissage.</p><br />
 
                     <table>
                         <caption>Dernière mise à jour : mars 2020.</caption>
@@ -117,10 +118,8 @@
         <footer>
             <h1>Antoine Després - 2020</h1>
             <hr />
-            <p><a href="contact.html">Contact</a><br><a href="https://www.linkedin.com/in/antoine-despr%C3%A9s-89614718b/"><img src="images/linkedin_icon.png" alt="Connectons-nous sur LinkedIn !" /></a><br /> <a href="legal.html">Mentions légales</a><br></p>
+            <p><a href="../contact/">Contact</a><br><a href="https://www.linkedin.com/in/antoine-despr%C3%A9s-89614718b/"><img src="../images/linkedin_icon.png" alt="Connectons-nous sur LinkedIn !" /></a><br /> <a href="../legal/">Mentions légales</a><br></p>
         </footer>
 
     </div> <!-- fin id="globale"-->
-</body>
-
-</html>
+</body></html>
