--- a/contact/index.html
+++ b/contact/index.html
@@ -11,31 +11,31 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js" integrity="sha384-6khuMg9gaYr5AxOqhkVIODVIvm9ynTT5J4V1cfthmT+emCG6yVmEZsRHdxlotUnm" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="styleCSS/style.css" />
-    <link rel="stylesheet" type="text/css" href="styleCSS/stylepages.css" />
-    <link rel="stylesheet" media="screen and (max-width: 992px)" href="styleCSS/styleMobile.css" />
+    <link rel="stylesheet" type="text/css" href="../styleCSS/style.css" />
+    <link rel="stylesheet" type="text/css" href="../styleCSS/stylepages.css" />
+    <link rel="stylesheet" media="screen and (max-width: 992px)" href="../styleCSS/styleMobile.css" />
 </head>
 
 <body ontouchstart="">
 
     <div id="globale">
         <header>
-            <h1><a href="index.html">Antoine Després</a></h1>
+            <h1><a href="../">Antoine Després</a></h1>
             <h2>Étudiant à l'IUT de Paris</h2>
             <hr />
 
             <nav>
                 <ul>
-                    <li><a href="experiences.html">Expériences</a></li>
+                    <li><a href="../experiences/">Expériences</a></li>
                     <li><a href="#">Compétences</a>
                         <ul>
-                            <li><a href="competences.html#programmation">Programmation</a></li>
-                            <li><a href="competences.html#mathematiques">Mathématiques</a></li>
-                            <li><a href="competences.html#bureautique">Bureautique</a></li>
-                            <li><a href="competences.html#langues">Langues</a></li>
+                            <li><a href="../competences/#programmation">Programmation</a></li>
+                            <li><a href="../competences/#mathematiques">Mathématiques</a></li>
+                            <li><a href="../competences/#bureautique">Bureautique</a></li>
+                            <li><a href="../competences/#langues">Langues</a></li>
                         </ul>
                     </li>
-                    <li><a href="loisirs.html">Loisirs</a></li>
+                    <li><a href="../loisirs/">Loisirs</a></li>
                 </ul>
             </nav>
 
@@ -98,7 +98,6 @@
                         $('form#formContact')[0].reset();
                     });
                 });
-
             </script>
 
         </div> <!-- fin id="page"-->
@@ -106,9 +105,7 @@
         <footer>
             <h1>Antoine Després - 2020</h1>
             <hr />
-            <p><a href="contact.html">Contact</a><br><a href="https://www.linkedin.com/in/antoine-despr%C3%A9s-89614718b/"><img src="images/linkedin_icon.png" alt="Connectons-nous sur LinkedIn !" /></a><br /> <a href="legal.html">Mentions légales</a><br></p>
+            <p><a href="../contact/">Contact</a><br><a href="https://www.linkedin.com/in/antoine-despr%C3%A9s-89614718b/"><img src="../images/linkedin_icon.png" alt="Connectons-nous sur LinkedIn !" /></a><br /> <a href="../legal/">Mentions légales</a><br></p>
         </footer>
     </div> <!-- fin id="globale"-->
-</body>
-
-</html>
+</body></html>
