--- a/loisirs/index.html
+++ b/loisirs/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE HTML>
 <html lang="fr">
 
 <head>
@@ -10,33 +11,34 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js" integrity="sha384-6khuMg9gaYr5AxOqhkVIODVIvm9ynTT5J4V1cfthmT+emCG6yVmEZsRHdxlotUnm" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="styleCSS/style.css" />
-    <link rel="stylesheet" type="text/css" href="styleCSS/stylepages.css" />
-    <link rel="stylesheet" media="screen and (max-width: 992px)" href="styleCSS/styleMobile.css" />
+    <link rel="stylesheet" type="text/css" href="../styleCSS/style.css" />
+    <link rel="stylesheet" type="text/css" href="../styleCSS/stylepages.css" />
+    <link rel="stylesheet" media="screen and (max-width: 992px)" href="../styleCSS/styleMobile.css" />
 </head>
 
 <body ontouchstart="">
 
     <div id="globale">
         <header>
-            <h1><a href="index.html">Antoine Després</a></h1>
+            <h1><a href="../">Antoine Després</a></h1>
             <h2>Étudiant à l'IUT de Paris</h2>
             <hr />
 
             <nav>
                 <ul>
-                    <li><a href="experiences.html">Expériences</a></li>
+                    <li><a href="../experiences/">Expériences</a></li>
                     <li><a href="#">Compétences</a>
                         <ul>
-                            <li><a href="competences.html#programmation">Programmation</a></li>
-                            <li><a href="competences.html#mathematiques">Mathématiques</a></li>
-                            <li><a href="competences.html#bureautique">Bureautique</a></li>
-                            <li><a href="competences.html#langues">Langues</a></li>
+                            <li><a href="../competences/#programmation">Programmation</a></li>
+                            <li><a href="../competences/#mathematiques">Mathématiques</a></li>
+                            <li><a href="../competences/#bureautique">Bureautique</a></li>
+                            <li><a href="../competences/#langues">Langues</a></li>
                         </ul>
                     </li>
-                    <li><a href="loisirs.html">Loisirs</a></li>
+                    <li><a href="../loisirs/">Loisirs</a></li>
                 </ul>
             </nav>
+
         </header>
 
         <div id="page">
@@ -46,19 +48,19 @@
 
                 <article>
                     <h1 id="arduino">Arduino</h1><br />
-                    <p><a href="https://arduino.cc"><img class="imageflottante" src="images/arduino_uno.png" alt="Une carte Arduino UNO R3." /></a>Ayant beaucoup apprécié de travailler sur Arduino au lycée, j'ai décidé d'acheter ma propre carte et mes propres composants afin de réaliser différents projets. Je prévois de réaliser une serrure contrôlable avec des badges RFID en m'inspirant de la <a href="https://www.youtube.com/watch?v=V0ZyJXRi-1Q">vidéo</a> de la chaîne YouTube ExperimentBoy, et à l'avenir un mini robot téléguidé.</p>
+                    <p><a href="https://arduino.cc"><img class="imageflottante" src="../images/arduino_uno.png" alt="Une carte Arduino UNO R3." /></a>Ayant beaucoup apprécié de travailler sur Arduino au lycée, j'ai décidé d'acheter ma propre carte et mes propres composants afin de réaliser différents projets. Je prévois de réaliser une serrure contrôlable avec des badges RFID en m'inspirant de la <a href="https://www.youtube.com/watch?v=V0ZyJXRi-1Q">vidéo</a> de la chaîne YouTube ExperimentBoy, et à l'avenir un mini robot téléguidé.</p>
                     <p>Les possibilités de création sont très nombreuses, l'on retrouve en effet de nombreuses présentations de projets personnels sur internet à la fois créatifs et inspirants.</p>
                 </article>
 
                 <article>
                     <h1 id="photographie">Photographie</h1><br />
-                    <p><a href="https://www.instagram.com/antoine_s.photographs/"><img class="imageflottante" src="images/logo_instagram.png" alt="Le logo d'Instagram." /></a>Depuis l'instant où j'ai eu pour la première fois un appareil photo dans la main, lorsque j'étais petit, j'ai toujours eu l'envie d'immortaliser certaines scènes du quotidien, pour pouvoir les partager et qu'elles ne restent pas simplement dans ma mémoire.</p>
+                    <p><a href="https://www.instagram.com/antoine_s.photographs/"><img class="imageflottante" src="../images/logo_instagram.png" alt="Le logo d'Instagram." /></a>Depuis l'instant où j'ai eu pour la première fois un appareil photo dans la main, lorsque j'étais petit, j'ai toujours eu l'envie d'immortaliser certaines scènes du quotidien, pour pouvoir les partager et qu'elles ne restent pas simplement dans ma mémoire.</p>
                     <p>La progression des smartphones dans le domaine de l'image et de la vidéo me permet d'exercer cette petite passion sans devoir dépenser une lourde somme dans une caméra. Sur mon temps libre, je poste mes plus beaux clichés sur mon blog <a href="https://www.instagram.com/antoine_s.photographs/">Instagram</a>. Il s'agit principalement de photographies de monuments, fleurs, paysages, nourriture et animaux.</p>
 
                 </article>
                 <article>
                     <h1 id="dessin">Dessin</h1><br />
-                    <p><a href="https://www.apple.com/fr/ipad-pro/"><img class="imageflottante" src="images/ipad_pro.png" alt="Les deux tailles d'iPad Pro." /></a>Depuis toujours, je n'ai jamais été bon en dessin. En 2019, j'ai pris la décision de prendre ma revanche sur ce passé et de me lancer dans cet art. Souhaitant intégrer un peu d'informatique à mes créations, j'ai acheté un Apple Pencil pour pouvoir dessiner sur iPad avec l'application Procreate.</p>
+                    <p><a href="https://www.apple.com/fr/ipad-pro/"><img class="imageflottante" src="../images/ipad_pro.png" alt="Les deux tailles d'iPad Pro." /></a>Depuis toujours, je n'ai jamais été bon en dessin. En 2019, j'ai pris la décision de prendre ma revanche sur ce passé et de me lancer dans cet art. Souhaitant intégrer un peu d'informatique à mes créations, j'ai acheté un Apple Pencil pour pouvoir dessiner sur iPad avec l'application Procreate.</p>
                     <p>La chaîne YouTube de <a href="https://www.youtube.com/galshir">Gal Shir</a> constitue une source d'inspiration pour moi, car cette personne utilise exactement les mêmes outils et la même application dans ses vidéos. Je m'entraîne donc à reproduire ses dessins pour m'améliorer, ce qui stimule également mon imagination.</p>
 
                 </article>
@@ -70,7 +72,7 @@
         <footer>
             <h1>Antoine Després - 2020</h1>
             <hr />
-            <p><a href="contact.html">Contact</a><br><a href="https://www.linkedin.com/in/antoine-despr%C3%A9s-89614718b/"><img src="images/linkedin_icon.png" alt="Connectons-nous sur LinkedIn !" /></a><br /> <a href="legal.html">Mentions légales</a><br></p>
+            <p><a href="../contact/">Contact</a><br><a href="https://www.linkedin.com/in/antoine-despr%C3%A9s-89614718b/"><img src="../images/linkedin_icon.png" alt="Connectons-nous sur LinkedIn !" /></a><br /> <a href="../legal/">Mentions légales</a><br></p>
         </footer>
 
     </div> <!-- fin id="globale"-->
