--- a/index.html
+++ b/index.html
@@ -20,25 +20,22 @@
 
     <div id="globale">
         <header>
-            <div id="nomTexte">
-                <h1><a href="index.html">Antoine Després</a></h1>
-                <h2>Étudiant à l'IUT de Paris</h2>
-            </div>
-
+            <h1><a href="./">Antoine Després</a></h1>
+            <h2>Étudiant à l'IUT de Paris</h2>
             <hr />
 
             <nav>
                 <ul>
-                    <li><a href="experiences.html">Expériences</a></li>
+                    <li><a href="./experiences/">Expériences</a></li>
                     <li><a href="#">Compétences</a>
                         <ul>
-                            <li><a href="competences.html#programmation">Programmation</a></li>
-                            <li><a href="competences.html#mathematiques">Mathématiques</a></li>
-                            <li><a href="competences.html#bureautique">Bureautique</a></li>
-                            <li><a href="competences.html#langues">Langues</a></li>
+                            <li><a href="./competences/#programmation">Programmation</a></li>
+                            <li><a href="./competences/#mathematiques">Mathématiques</a></li>
+                            <li><a href="./competences/#bureautique">Bureautique</a></li>
+                            <li><a href="./competences/#langues">Langues</a></li>
                         </ul>
                     </li>
-                    <li><a href="loisirs.html">Loisirs</a></li>
+                    <li><a href="./loisirs/">Loisirs</a></li>
                 </ul>
             </nav>
 
@@ -56,25 +53,25 @@
                         <div class="col-lg-3">
                             <h1>Expériences</h1>
                             <p>J'ai réalisé mon stage de troisième à la Société Générale. Ce dernier m'a permis d'observer l'intégration des logiciels et de l'informatique en général dans le secteur bancaire.</p>
-                            <a class="btn btn-dark" href="experiences.html" role="button">En savoir plus</a>
+                            <a class="btn btn-dark" href="./experiences/" role="button">En savoir plus</a>
                         </div>
                         <div class="col-lg-9"></div>
                     </div>
                     <div class="row">
-                        <div class="col-lg-7"><a href="competences.html"><img class="grandebanniere" src="images/banniere_langages.png" alt="Voici quelques langages que je maîtrise !" /></a></div>
+                        <div class="col-lg-7"><a href="./competences/"><img class="grandebanniere" src="images/banniere_langages.png" alt="Voici quelques langages que je maîtrise !" /></a></div>
                         <div class="col-lg-5">
                             <h1>Compétences</h1>
                             <p>Ma formation en <a href="https://www.iut.parisdescartes.fr/informatique/">DUT Informatique</a> me permet de maîtriser les bases des principaux langages de programmation, à savoir C, C++, Java et Python. Je m'intéresse également au langage Swift en dehors des cours.</p>
-                            <a class="btn btn-dark" href="competences.html" role="button">En savoir plus</a>
+                            <a class="btn btn-dark" href="./competences" role="button">En savoir plus</a>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-lg-4">
                             <h1>Loisirs</h1>
                             <p>En dehors des cours, je m'adonne au dessin et à la photographie, et plus occasionnellement à la création de montages électroniques à l'aide de cartes <a href="http://arduino.cc">Arduino</a>.</p>
-                            <a class="btn btn-dark" href="loisirs.html" role="button">En savoir plus</a>
+                            <a class="btn btn-dark" href="./loisirs" role="button">En savoir plus</a>
                         </div>
-                        <div class="col-lg-8"><a href="loisirs.html"><img class="grandebanniere" src="images/banniere_loisirs.png" alt="Le logo Arduino, une carte Arduino UNO R3 et le logo d'Instagram." /></a></div>
+                        <div class="col-lg-8"><a href="./loisirs"><img class="grandebanniere" src="images/banniere_loisirs.png" alt="Le logo Arduino, une carte Arduino UNO R3 et le logo d'Instagram." /></a></div>
                     </div>
                 </div>
 
@@ -85,7 +82,7 @@
         <footer>
             <h1>Antoine Després - 2020</h1>
             <hr />
-            <p><a href="contact.html">Contact</a><br><a href="https://www.linkedin.com/in/antoine-despr%C3%A9s-89614718b/"><img src="images/linkedin_icon.png" alt="Connectons-nous sur LinkedIn !" /></a><br /> <a href="legal.html">Mentions légales</a><br></p>
+            <p><a href="./contact/">Contact</a><br><a href="https://www.linkedin.com/in/antoine-despr%C3%A9s-89614718b/"><img src="./images/linkedin_icon.png" alt="Connectons-nous sur LinkedIn !" /></a><br /> <a href="./legal/">Mentions légales</a><br></p>
         </footer>
     </div> <!-- fin id="globale"-->
 </body></html>
