--- a/contact/index.html
+++ b/contact/index.html
@@ -78,8 +78,12 @@
                     <textarea class="form-control" name="zoneTexte" id="messageBox" rows="5"></textarea>
                 </div>
                 <br />
+                <p>Antoine Després traite les données recueillies à des fins de contact ultérieur uniquement.
+
+                    Pour en savoir plus sur la gestion de vos données personnelles et pour exercer vos droits, reportez-vous à la page <a href="../legal/">Mentions légales</a>.</p>
                 <button type="submit" id="submit-form" name="envoyer" class="btn btn-primary">Envoyer</button>
             </form>
+
             <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
             <script type="text/javascript" src="./jquery.serializeObject.min.js"></script>
 
