--- a/loisirs/index.html
+++ b/loisirs/index.html
@@ -48,20 +48,19 @@
 
                 <article>
                     <h1 id="arduino">Arduino</h1><br />
-                    <p><a href="https://arduino.cc"><img class="imageflottante" src="../images/arduino_uno.png" alt="Une carte Arduino UNO R3." /></a>Ayant beaucoup apprécié de travailler sur Arduino au lycée, j'ai décidé d'acheter ma propre carte et mes propres composants afin de réaliser différents projets. Je prévois de réaliser une serrure contrôlable avec des badges RFID en m'inspirant de la <a href="https://www.youtube.com/watch?v=V0ZyJXRi-1Q">vidéo</a> de la chaîne YouTube ExperimentBoy, et à l'avenir un mini robot téléguidé.</p>
-                    <p>Les possibilités de création sont très nombreuses, l'on retrouve en effet de nombreuses présentations de projets personnels sur internet à la fois créatifs et inspirants.</p>
+                    <p><a href="https://arduino.cc"><img class="imageflottante" src="../images/arduino_uno.png" alt="Une carte Arduino UNO R3." /></a>C'est avec Arduino que j'ai commencé la programmation, dès la première, au lycée. Cela m'a tout de suite beaucoup plu, et j'ai réalisé que les possibilités de création étaient alors très nombreuses, l'on retrouve en effet pléthore de présentations de projets personnels sur internet à la fois créatifs et inspirants que je souhaite reproduire.</p>
                 </article>
 
                 <article>
                     <h1 id="photographie">Photographie</h1><br />
                     <p><a href="https://www.instagram.com/antoine_s.photographs/"><img class="imageflottante" src="../images/logo_instagram.png" alt="Le logo d'Instagram." /></a>Depuis l'instant où j'ai eu pour la première fois un appareil photo dans la main, lorsque j'étais petit, j'ai toujours eu l'envie d'immortaliser certaines scènes du quotidien, pour pouvoir les partager et qu'elles ne restent pas simplement dans ma mémoire.</p>
-                    <p>La progression des smartphones dans le domaine de l'image et de la vidéo me permet d'exercer cette petite passion sans devoir dépenser une lourde somme dans une caméra. Sur mon temps libre, je poste mes plus beaux clichés sur mon blog <a href="https://www.instagram.com/antoine_s.photographs/">Instagram</a>. Il s'agit principalement de photographies de monuments, fleurs, paysages, nourriture et animaux.</p>
+                    <p>La progression des smartphones dans le domaine de l'image et de la vidéo me permet d'exercer cette petite passion sans devoir dépenser une lourde somme dans une caméra. Sur mon temps libre, je poste mes plus beaux clichés sur mon blog <a href="https://www.instagram.com/antoine_s.photographs/">Instagram</a>. Il s'agit principalement de photographies de monuments, de la nature, de paysages, de nourriture et d'animaux.</p>
 
                 </article>
                 <article>
                     <h1 id="dessin">Dessin</h1><br />
-                    <p><a href="https://www.apple.com/fr/ipad-pro/"><img class="imageflottante" src="../images/ipad_pro.png" alt="Les deux tailles d'iPad Pro." /></a>Depuis toujours, je n'ai jamais été bon en dessin. En 2019, j'ai pris la décision de prendre ma revanche sur ce passé et de me lancer dans cet art. Souhaitant intégrer un peu d'informatique à mes créations, j'ai acheté un Apple Pencil pour pouvoir dessiner sur iPad avec l'application Procreate.</p>
-                    <p>La chaîne YouTube de <a href="https://www.youtube.com/galshir">Gal Shir</a> constitue une source d'inspiration pour moi, car cette personne utilise exactement les mêmes outils et la même application dans ses vidéos. Je m'entraîne donc à reproduire ses dessins pour m'améliorer, ce qui stimule également mon imagination.</p>
+                    <p><a href="https://www.apple.com/fr/ipad-pro/"><img class="imageflottante" src="../images/ipad_pro.png" alt="Les deux tailles d'iPad Pro." /></a>Depuis toujours, je n'ai jamais été très bon en dessin. En 2019, j'ai pris la décision de prendre ma revanche sur ce passé et de me lancer dans cet art. Souhaitant intégrer un peu d'informatique à mes créations, j'ai acheté un Apple Pencil pour pouvoir dessiner sur iPad avec l'application Procreate.</p>
+                    <p>La chaîne YouTube de <a href="https://www.youtube.com/galshir">Gal Shir</a> est l'une de mes sources d'inspiration, car cette personne utilise exactement les mêmes outils et la même application que moi dans ses vidéos. Je m'entraîne donc à reproduire ses dessins pour m'améliorer, ce qui stimule également mon imagination.</p>
 
                 </article>
 
