--- a/legal/index.html
+++ b/legal/index.html
@@ -51,6 +51,20 @@
                         Tous les noms de produits, logos et marques sont la propriété de leurs détenteurs respectifs.<br>
                         Tous les noms d'entreprises, de produits et de services mentionnés sur ce site Internet le sont à des fins d'identification uniquement. <br>
                         La mention de ces noms, logos et marques ne saurait constituer une recommandation d'utilisation.</p>
+
+                    <p>Les informations recueillies dans le questionnaire sont enregistrées dans un fichier informatisé par Antoine Després. La base légale du traitement est le consentement.
+
+                        Les données collectées seront communiquées aux seuls destinataires suivants : Antoine Després.
+
+                        Elles sont conservées pendant six mois.
+
+                        Vous pouvez accéder aux données vous concernant, les rectifier, demander leur effacement ou exercer votre droit à la limitation du traitement de vos données. Vous pouvez retirer à tout moment votre consentement au traitement de vos données. Vous pouvez également vous opposer au traitement de vos données. Vous pouvez également exercer votre droit à la portabilité de vos données.
+
+                        Consultez le site cnil.fr pour plus d’informations sur vos droits.
+
+                        Pour exercer ces droits ou pour toute question sur le traitement de vos données dans ce dispositif, vous pouvez contacter (le cas échéant, notre délégué à la protection des données ou le service chargé de l’exercice de ces droits) : <a href="mailto:antoine.despres@live.fr">antoine.despres@live.fr</a>.
+
+                        Si vous estimez, après nous avoir contactés, que vos droits « Informatique et Libertés » ne sont pas respectés, vous pouvez adresser une réclamation à la CNIL.</p>
                 </article>
 
             </section>
