--- a/competences/index.html
+++ b/competences/index.html
@@ -20,17 +20,17 @@
 
     <div id="globale">
         <header>
-            <h1><a href="../">Antoine Després</a></h1>
-            <h2>Étudiant à l'IUT de Paris</h2>
-            <hr />
-
+            <div id="nomprenom">
+                <h1><a href="../">Antoine Després</a></h1>
+                <h2>Étudiant à l'IUT de Paris</h2>
+                <hr>
+            </div>
             <nav>
                 <ul>
                     <li><a href="../experiences/">Expériences</a></li>
                     <li><a href="#">Compétences</a>
                         <ul>
                             <li><a href="../competences/#programmation">Programmation</a></li>
-                            <li><a href="../competences/#mathematiques">Mathématiques</a></li>
                             <li><a href="../competences/#bureautique">Bureautique</a></li>
                             <li><a href="../competences/#langues">Langues</a></li>
                         </ul>
@@ -48,28 +48,29 @@
 
                 <article>
                     <h1 id="programmation">Programmation</h1><br />
-                    <p><a href="https://arduino.cc"><img class="imageflottante" src="../images/Logo-Arduino.png" alt="Le logo Arduino." /></a>J'ai commencé la programmation dès le lycée avec les cours de sciences de l'ingénieur. Nous utilisions des cartes programmables de type Arduino Uno qui nous permettaient de concevoir de petits circuits électroniques (chenillard LED, servomoteurs, capteurs de distance). L'un de nos projets consistait en la reproduction du système d'information voyageur des rames de métro parisien : nous avons associé des mesures de distances recueillies par un capteur à une position d'une rame sur la ligne. Ainsi, il nous était possible de programmer l'allumage, l'extinction ou encore le clignotement de chaque diode en fonction de la position de la rame.</p>
-                    <p>Le langage Arduino est une version dérivée du langage C, que j'ai retrouvé en première année de DUT Informatique accompagné de son évolution C++, ce qui m'a donné une certaine avance dans la compréhension des fondamentaux du code. J'apprends actuellement la programmation orientée objet en Java, et cela me plait beaucoup.</p>
-                    <p>J'ai également des bases en langage HTML et CSS, ce qui m'a permis de concevoir le site sur lequel vous naviguez actuellement.</p>
+                    <div class="articlecontent">
+                        <div class="imagearticle"><a href="https://arduino.cc"><img class="imageflottante" src="../images/Logo-Arduino.png" alt="Le logo Arduino." /></a></div>
+                        <p>J'ai commencé la programmation dès le lycée avec les cours de sciences de l'ingénieur. Nous utilisions des cartes programmables de type Arduino Uno qui nous permettaient de concevoir de petits circuits électroniques (chenillard LED, servomoteurs, capteurs de distance). L'un de nos projets consistait en la reproduction du système d'information voyageur des rames de métro parisien : nous avons associé des mesures de distances recueillies par un capteur à une position d'une rame sur la ligne. Ainsi, il nous était possible de programmer l'allumage, l'extinction ou encore le clignotement de chaque diode en fonction de la position de la rame.
+                            <br><br>Au cours de cette première année de DUT Informatique, j'ai grandement approfondi mes compétences en programmation, avec l'apprentissage du C, du C++, du Java et du Visual Basic.<br>
+                            <br>J'ai également des bases en langage HTML, CSS et JavaScript, ce qui m'a permis de concevoir le site sur lequel vous naviguez actuellement.</p>
+                    </div>
                 </article>
 
-                <article>
-                    <h1 id="mathematiques">Mathématiques</h1><br />
-                    <p><img class="imageflottante" src="../images/pi.png" F alt="Le nombre Pi, fascinant !" />Mon cursus scolaire m'a transmis de nombreuses connaissances en mathématiques et en logique. Je maîtrise de nombreux outils mathématiques tels que la trigonométrie, les nombres complexes, le calcul matriciel, différentiel ou encore intégral.</p>
-                    <p>J'étudie la logique depuis 2017, ce qui me donne une certaine aisance en matière de raisonnement. J'ai également des notions en théorie des graphes.</p>
-
-                </article>
                 <article>
                     <h1 id="bureautique">Bureautique</h1><br />
-                    <p><a href="https://office.com"><img class="imageflottante" src="../images/logo_office.png" alt="Le logo de Microsoft Office." /></a>La réalisation de nombreux projets et travaux de groupe depuis le lycée m'ont permis de maîtriser la suite logicielle Microsoft Office. Je suis apte à rédiger des rapports de qualité traitant de domaines variés et de concevoir une présentation PowerPoint associée qui saura sortir du lot et marquer les esprits.</p>
-                    <p>Je maîtrise également Excel, qui me permet d'appuyer mes présentations avec des statistiques pertinentes, ainsi que d'autres logiciels plus spécialisés tels que Publisher pour la conception d'affiches et de cartes en tout genre et Visio pour la réalisation d'organigrammes et de plans d'architecture en 2 dimensions.</p>
+                    <div class="articlecontent">
+                        <div class="imagearticle"><a href="https://office.com"><img class="imageflottante" src="../images/logo_office.png" alt="Le logo de Microsoft Office." /></a></div>
+                        <p>La réalisation de nombreux projets et travaux de groupe depuis le lycée m'ont permis de maîtriser la suite logicielle Microsoft Office. Je suis apte à rédiger des rapports de qualité traitant de domaines variés et de concevoir une présentation PowerPoint associée qui saura sortir du lot et marquer les esprits. <br>Je maîtrise également Excel, qui me permet d'appuyer mes présentations avec des statistiques pertinentes, ainsi que d'autres logiciels plus spécialisés tels que Publisher pour la conception d'affiches et de cartes en tout genre et Visio pour la réalisation d'organigrammes et de plans d'architecture en 2 dimensions.</p>
+                    </div>
                 </article>
                 <article>
                     <h1 id="langues">Langues</h1><br />
-                    <p><img class="imageflottante" src="../images/planet.png" alt="Notre chère planète !" />Au cours de ma vie, j'ai eu l'occasion d'apprendre plusieurs langues, que ce soit à l'école ou en dehors par envie personnelle. Voici un tableau dans lequel figure mon niveau de maîtrise de chacune d'entre elles ainsi que d'autres informations telles que la durée d'apprentissage.</p><br />
+                    <div class="articlecontent">
+                        <p>Au cours de ma vie, j'ai eu l'occasion d'apprendre plusieurs langues, que ce soit à l'école ou en dehors par envie personnelle. Voici un tableau dans lequel figure mon niveau de maîtrise de chacune d'entre elles ainsi que d'autres informations telles que la durée d'apprentissage.</p>
+                    </div>
 
                     <table>
-                        <caption>Dernière mise à jour : mars 2020.</caption>
+                        <caption>Dernière mise à jour : avril 2020.</caption>
 
                         <thead>
                             <!-- En-tête du tableau -->
@@ -87,7 +88,7 @@
                                 <td>Français</td>
                                 <td>C2</td>
                                 <td>2001</td>
-                                <td>Projet Voltaire</td>
+                                <td>Langue maternelle</td>
                             </tr>
                             <tr>
                                 <td>Anglais</td>
