--- a/experiences/index.html
+++ b/experiences/index.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Fin des informations spécifiques aux mobiles -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="jquery-3.4.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js" integrity="sha384-6khuMg9gaYr5AxOqhkVIODVIvm9ynTT5J4V1cfthmT+emCG6yVmEZsRHdxlotUnm" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="../styleCSS/style.css" />
@@ -30,7 +31,6 @@
                     <li><a href="#">Compétences</a>
                         <ul>
                             <li><a href="../competences/#programmation">Programmation</a></li>
-                            <li><a href="../competences/#mathematiques">Mathématiques</a></li>
                             <li><a href="../competences/#bureautique">Bureautique</a></li>
                             <li><a href="../competences/#langues">Langues</a></li>
                         </ul>
@@ -48,9 +48,10 @@
 
                 <article>
                     <h1>Stage de troisième</h1><br />
-                    <p><a href="https://societegenerale.fr"><img class="imageflottante" src="../images/logo-societe-generale.png" alt="Le logo Arduino, une carte Arduino UNO R3 et le logo d'Instagram." /></a>Fin 2015, j'ai réalisé un stage d'observation d'une semaine au sein de la Société Générale, dans le quartier d'affaires de La Défense. Il peut paraître assez incohérent qu'un jeune désirant travailler dans l'informatique réalise son stage dans une banque, mais il faut savoir que ces dernières sont les entreprises qui emploient le plus d'informaticiens.</p>
-                    <p>Ce stage m'a permis de découvrir le monde de l'entreprise pour la première fois de ma vie, et cela m'a été très enrichissant : méthodes d'organisation, gestion des pannes informatique, déploiement des logiciels spécialisés, tablettes pour les employés...</p>
-                    <p>J'ai pu profiter de ce stage afin de m'entrenir avec un consultant en informatique travaillant pour la Société Générale afin d'en savoir plus sur les études à réaliser pour travailler dans l'informatique.</p>
+                    <div class="articlecontent">
+                        <div class="imagearticle"><a href="https://societegenerale.fr"><img class="imageflottante" src="../images/logo-societe-generale.png" alt="Le logo Arduino, une carte Arduino UNO R3 et le logo d'Instagram." /></a></div>
+                            <p>Fin 2015, j'ai réalisé un stage d'observation d'une semaine au sein de la Société Générale, dans le quartier d'affaires de La Défense. Il peut paraître assez incohérent qu'un jeune désirant travailler dans l'informatique réalise son stage dans une banque, mais il faut savoir que ces dernières sont les entreprises qui emploient le plus d'informaticiens.<br>Ce stage m'a permis de découvrir le monde de l'entreprise pour la première fois de ma vie, et cela m'a été très enrichissant : méthodes d'organisation, gestion des pannes informatique, déploiement des logiciels spécialisés, tablettes pour les employés...<br>J'ai pu profiter de ce stage afin de m'entrenir avec un consultant en informatique travaillant pour la Société Générale afin d'en savoir plus sur les études à réaliser pour travailler dans l'informatique.</p>
+                        </div>
                 </article>
 
             </section>
