--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body ontouchstart="">
 
     <div id="globale">
-        <header>
+        <header id="myHeader">
             <h1><a href="./">Antoine Després</a></h1>
             <h2>Étudiant à l'IUT de Paris</h2>
             <hr />
@@ -29,8 +29,7 @@
                     <li><a href="./experiences/">Expériences</a></li>
                     <li><a href="#">Compétences</a>
                         <ul>
-                            <li><a href="./competences/#programmation">Programmation</a></li>
-                            <li><a href="./competences/#mathematiques">Mathématiques</a></li>
+                            <li><a href="./competences/#programmation">Programmation</a>
                             <li><a href="./competences/#bureautique">Bureautique</a></li>
                             <li><a href="./competences/#langues">Langues</a></li>
                         </ul>
@@ -38,9 +37,7 @@
                     <li><a href="./loisirs/">Loisirs</a></li>
                 </ul>
             </nav>
-
         </header>
-
         <div id="page">
             <section id="sec1">
                 <div id="intro">
@@ -52,8 +49,8 @@
                     <div class="row">
                         <div class="col-lg-3">
                             <h1>Expériences</h1>
-                            <p>J'ai réalisé mon stage de troisième à la Société Générale. Ce dernier m'a permis d'observer l'intégration des logiciels et de l'informatique en général dans le secteur bancaire.</p>
-                            <a class="btn btn-dark" href="./experiences/" role="button">En savoir plus</a>
+                            <p>J'ai réalisé mon stage de troisième à la Société Générale. Ce dernier m'a permis d'observer l'intégration des logiciels et de l'informatique en général dans le secteur bancaire</p>
+                            <a class="btn btn-dark" href="./experiences/" role="button">Lire</a>
                         </div>
                         <div class="col-lg-9"></div>
                     </div>
@@ -61,15 +58,15 @@
                         <div class="col-lg-7"><a href="./competences/"><img class="grandebanniere" src="images/banniere_langages.png" alt="Voici quelques langages que je maîtrise !" /></a></div>
                         <div class="col-lg-5">
                             <h1>Compétences</h1>
-                            <p>Ma formation en <a href="https://www.iut.parisdescartes.fr/informatique/">DUT Informatique</a> me permet de maîtriser les bases des principaux langages de programmation, à savoir C, C++, Java et Python. Je m'intéresse également au langage Swift en dehors des cours.</p>
-                            <a class="btn btn-dark" href="./competences" role="button">En savoir plus</a>
+                            <p>Ma formation en <a href="https://www.iut.parisdescartes.fr/informatique/">DUT Informatique</a> me permet de maîtriser les bases des principaux langages de programmation, à savoir C, C++, Java et Python. Je m'intéresse également au langage Swift en dehors des cours</p>
+                            <a class="btn btn-dark" href="./competences" role="button">Lire plus</a>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-lg-4">
                             <h1>Loisirs</h1>
-                            <p>En dehors des cours, je m'adonne au dessin et à la photographie, et plus occasionnellement à la création de montages électroniques à l'aide de cartes <a href="http://arduino.cc">Arduino</a>.</p>
-                            <a class="btn btn-dark" href="./loisirs" role="button">En savoir plus</a>
+                            <p>En dehors des cours, je m'adonne à des projets personnels en programmation, à la photographie et occasionnellement au dessin</p>
+                            <a class="btn btn-dark" href="./loisirs" role="button">Lire plus</a>
                         </div>
                         <div class="col-lg-8"><a href="./loisirs"><img class="grandebanniere" src="images/banniere_loisirs.png" alt="Le logo Arduino, une carte Arduino UNO R3 et le logo d'Instagram." /></a></div>
                     </div>
