--- a/loisirs/index.html
+++ b/loisirs/index.html
@@ -9,8 +9,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Fin des informations spécifiques aux mobiles -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="jquery-3.4.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js" integrity="sha384-6khuMg9gaYr5AxOqhkVIODVIvm9ynTT5J4V1cfthmT+emCG6yVmEZsRHdxlotUnm" crossorigin="anonymous"></script>
+    <script type="text/javascript " src=../fixedmenu.js></script>
     <link rel="stylesheet" type="text/css" href="../styleCSS/style.css" />
     <link rel="stylesheet" type="text/css" href="../styleCSS/stylepages.css" />
     <link rel="stylesheet" media="screen and (max-width: 992px)" href="../styleCSS/styleMobile.css" />
@@ -19,7 +21,7 @@
 <body ontouchstart="">
 
     <div id="globale">
-        <header>
+        <header id="myHeader">
             <h1><a href="../">Antoine Després</a></h1>
             <h2>Étudiant à l'IUT de Paris</h2>
             <hr />
@@ -30,7 +32,6 @@
                     <li><a href="#">Compétences</a>
                         <ul>
                             <li><a href="../competences/#programmation">Programmation</a></li>
-                            <li><a href="../competences/#mathematiques">Mathématiques</a></li>
                             <li><a href="../competences/#bureautique">Bureautique</a></li>
                             <li><a href="../competences/#langues">Langues</a></li>
                         </ul>
@@ -38,29 +39,37 @@
                     <li><a href="../loisirs/">Loisirs</a></li>
                 </ul>
             </nav>
-
         </header>
-
         <div id="page">
             <section id="sec1">
                 <h1>Mes loisirs</h1>
-                <p>En dehors des cours, je m'adonne à la création de montages électroniques à l'aide de cartes Arduino ainsi qu'à la photographie, et occasionnellement au dessin.</p>
+                <p>En dehors des cours, je m'intéresse à la programmation sur cartes Arduino, à la création de bot Discord (Java, Python, JS), à la photographie et occasionnellement au dessin.</p>
 
                 <article>
-                    <h1 id="arduino">Arduino</h1><br />
-                    <p><a href="https://arduino.cc"><img class="imageflottante" src="../images/arduino_uno.png" alt="Une carte Arduino UNO R3." /></a>C'est avec Arduino que j'ai commencé la programmation, dès la première, au lycée. Cela m'a tout de suite beaucoup plu, et j'ai réalisé que les possibilités de création étaient alors très nombreuses, l'on retrouve en effet pléthore de présentations de projets personnels sur internet à la fois créatifs et inspirants que je souhaite reproduire.</p>
+                    <h1 id="discord">Discord</h1><br />
+                    <div class="articlecontent">
+                        <div class="imagearticle"><a href="https://discordapp.com"><img class="imageflottante" src="../images/Discord-Logo-Color.png" alt="Le logo Discord" /></a></div>
+                        <p>Au fur et à mesure de mon utilisation de Discord, qui a été renforcée par les mesures de confinement et les cours à distance, j'ai beaucoup gagné en interêt pour cette application. Les « bot » (programme automatisé de conversation) m'ont beaucoup plu et j'ai voulu tenter d'en créer un moi-même, ce que j'ai fait en langage Python. Je lui ajoute des fonctionnalités sur mon temps libre, et je prévois de continuer son développent en JavaScript.</p>
+                    </div>
+
                 </article>
 
                 <article>
                     <h1 id="photographie">Photographie</h1><br />
-                    <p><a href="https://www.instagram.com/antoine_s.photographs/"><img class="imageflottante" src="../images/logo_instagram.png" alt="Le logo d'Instagram." /></a>Depuis l'instant où j'ai eu pour la première fois un appareil photo dans la main, lorsque j'étais petit, j'ai toujours eu l'envie d'immortaliser certaines scènes du quotidien, pour pouvoir les partager et qu'elles ne restent pas simplement dans ma mémoire.</p>
-                    <p>La progression des smartphones dans le domaine de l'image et de la vidéo me permet d'exercer cette petite passion sans devoir dépenser une lourde somme dans une caméra. Sur mon temps libre, je poste mes plus beaux clichés sur mon blog <a href="https://www.instagram.com/antoine_s.photographs/">Instagram</a>. Il s'agit principalement de photographies de monuments, de la nature, de paysages, de nourriture et d'animaux.</p>
+                    <div class="articlecontent">
+                        <div class="imagearticle"><a href="https://www.instagram.com/antoine_s.photographs/"><img class="imageflottante" src="../images/logo_instagram.png" alt="Le logo d'Instagram." /></a></div>
+
+                        <p>Depuis l'instant où j'ai eu pour la première fois un appareil photo dans la main, lorsque j'étais petit, j'ai toujours eu l'envie d'immortaliser certaines scènes du quotidien, pour pouvoir les partager et qu'elles ne restent pas simplement dans ma mémoire.<br>La progression des smartphones dans le domaine de l'image et de la vidéo me permet d'exercer cette petite passion sans devoir dépenser une lourde somme dans une caméra. Sur mon temps libre, je poste mes plus beaux clichés sur mon blog <a href="https://www.instagram.com/antoine_s.photographs/">Instagram</a>. Il s'agit principalement de photographies de monuments, de la nature, de paysages, de nourriture et d'animaux.</p>
+                    </div>
 
                 </article>
                 <article>
                     <h1 id="dessin">Dessin</h1><br />
-                    <p><a href="https://www.apple.com/fr/ipad-pro/"><img class="imageflottante" src="../images/ipad_pro.png" alt="Les deux tailles d'iPad Pro." /></a>Depuis toujours, je n'ai jamais été très bon en dessin. En 2019, j'ai pris la décision de prendre ma revanche sur ce passé et de me lancer dans cet art. Souhaitant intégrer un peu d'informatique à mes créations, j'ai acheté un Apple Pencil pour pouvoir dessiner sur iPad avec l'application Procreate.</p>
-                    <p>La chaîne YouTube de <a href="https://www.youtube.com/galshir">Gal Shir</a> est l'une de mes sources d'inspiration, car cette personne utilise exactement les mêmes outils et la même application que moi dans ses vidéos. Je m'entraîne donc à reproduire ses dessins pour m'améliorer, ce qui stimule également mon imagination.</p>
+                    <div class="articlecontent">
+                        <div class="imagearticle"><a href="https://www.apple.com/fr/ipad-pro/"><img class="imageflottante" src="../images/ipad_pro.png" alt="Les deux tailles d'iPad Pro." /></a></div>
+                        <p>Depuis toujours, je n'ai jamais été très bon en dessin. En 2019, j'ai pris la décision de prendre ma revanche sur ce passé et de me lancer dans cet art. Souhaitant intégrer un peu d'informatique à mes créations, j'ai acheté un Apple Pencil pour pouvoir dessiner sur iPad avec l'application Procreate.<br>La chaîne YouTube de <a href="https://www.youtube.com/galshir">Gal Shir</a> est l'une de mes sources d'inspiration, car cette personne utilise exactement les mêmes outils et la même application que moi dans ses vidéos. Je m'entraîne donc à reproduire ses dessins pour m'améliorer, ce qui stimule également mon imagination.</p>
+                    </div>
+                    
 
                 </article>
 
